Burger fixed, scrollbar in the footer fixed, stories pages js fixed.

--- a/style.css
+++ b/style.css
@@ -584,7 +584,10 @@ body {
     background-color: #bcaa00;
     color: black;
     overflow-x: hidden;
-    
+}
+
+.police::-webkit-scrollbar {
+    display: none;
 }
 
 .txt{
